--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,8 +8,8 @@ usuario_login_check:
 usuario_logout:
     pattern: /logout
 
-incaa:
-    resource: "@IncaaBundle/Resources/config/routing.yml"
+agp:
+    resource: "@AgpBundle/Resources/config/routing.yml"
     prefix:   /
 
 UsuarioBundle:
@@ -20,6 +20,6 @@ CoreBundle:
     resource: "@CoreBundle/Resources/config/routing.yml"
     prefix:   /
     
-IncaaBundle:
-    resource: "@IncaaBundle/Resources/config/routing.yml"
+AgpBundle:
+    resource: "@AgpBundle/Resources/config/routing.yml"
     prefix:   /
