--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,7 +17,7 @@ security:
             form_login:
                 login_path: usuario_login
                 check_path: usuario_login_check
-                default_target_path: peliculas
+                default_target_path: /home
                 always_use_default_target_path: true
             logout:
                 path: usuario_logout
