--- a/src/JGM/AgpBundle/Resources/config/routing.yml
+++ b/src/JGM/AgpBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-IncaaBundle_peliculas:
-    resource: "@IncaaBundle/Resources/config/routing/peliculas.yml"
-    prefix:   /peliculas
+AgpBundle_default:
+    resource: "@AgpBundle/Resources/config/routing/default.yml"
+    prefix:   /
