Desarrollando ABM de clientes

--- a/src/JGM/AgpBundle/Resources/config/routing.yml
+++ b/src/JGM/AgpBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 AgpBundle_default:
     resource: "@AgpBundle/Resources/config/routing/default.yml"
     prefix:   /
+
+agp_cliente:
+    resource: "@AgpBundle/Resources/config/routing/cliente.yml"
+    prefix:   /cliente
