Desarrollando modulo de entrega

--- a/src/JGM/AgpBundle/Resources/config/routing.yml
+++ b/src/JGM/AgpBundle/Resources/config/routing.yml
@@ -9,3 +9,7 @@ agp_cliente:
 agp_producto:
     resource: "@AgpBundle/Resources/config/routing/producto.yml"
     prefix:   /producto
+        
+agp_entrega:
+    resource: "@AgpBundle/Resources/config/routing/entrega.yml"
+    prefix:   /entrega
