Desarrollando firma con canvas

--- a/src/JGM/AgpBundle/Resources/config/routing/entrega.yml
+++ b/src/JGM/AgpBundle/Resources/config/routing/entrega.yml
@@ -8,6 +8,10 @@ entrega_show:
 entrega_new:
     path:     /new
     defaults: { _controller: "AgpBundle:Entrega:new" }
+    
+entrega_firmas:
+    path:     /firmas
+    defaults: { _controller: "AgpBundle:Entrega:firmas" }
 
 entrega_create:
     path:     /create
